Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -72,7 +72,9 @@
 	\begin{cvsection}{Research}
 	   \begin{cvsubsection}{}{}{}
 	      \begin{itemize}
-	          \item \textbf{Neural Painters: A learned differentiable constraint for generating brushstroke paintings}. 2019. Under review for the Distill Research Journal.
+	          \item \textbf{Neural Painters: A learned differentiable constraint for generating brushstroke paintings}. 2019. 
+	          
+	          https://arxiv.org/abs/1904.08410
 	      \end{itemize}
 	   \end{cvsubsection}
 	\end{cvsection}
