Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -55,6 +55,7 @@
 	\begin{cvsection}{Open source software and personal projects}
 		\begin{cvsubsection}{}{}{}
 			\begin{itemize}
+			
 			    \item \textbf{Arbitrary style transfer in the browser}. Ported Arbitrary Style Transfer to the browser using model distillation. Invited to write a post about the project in Google Magenta's blog and contributed back the code to the Magenta repository. https://magenta.tensorflow.org/blog/2018/12/20/style-transfer-js/
 			    
 			    https://github.com/reiinakano/arbitrary-image-stylization-tfjs 
@@ -72,7 +73,11 @@
 	\begin{cvsection}{Research}
 	   \begin{cvsubsection}{}{}{}
 	      \begin{itemize}
-	          \item \textbf{Neural Painters: A learned differentiable constraint for generating brushstroke paintings}. 2019. 
+    		  \item \textbf{Neural Style Transfer with Adversarially Robust Classifiers}. Under review.
+    		    
+    		  https://reiinakano.com/2019/06/21/robust-neural-style-transfer.html
+	          
+	          \item \textbf{Neural Painters: A learned differentiable constraint for generating brushstroke paintings}. Under review.
 	          
 	          https://arxiv.org/abs/1904.08410
 	      \end{itemize}
