Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -29,7 +29,7 @@
 % Set applicant's personal data for header
 \name{Reiichiro Nakano}
 \address{Tokyo, Japan \linebreak https://reiinakano.github.io}
-\contacts{(+81) 70-2798-9087 \linebreak reiichiro.s.nakano@gmail.com}
+\contacts{reiichiro.s.nakano@gmail.com}
 
 \begin{document}
 
@@ -38,7 +38,7 @@
 	
 	% Print the content
 	\begin{cvsection}{Employment}
-		\begin{cvsubsection}{Software Engineer}{Infostellar}{December 2017 -- Present}
+		\begin{cvsubsection}{Software Engineer}{Infostellar}{December 2017 -- August 2019}
 			\begin{itemize}
 				\item Lead author and maintainer of Starcoder, a gRPC server for dynamically starting, stopping and communicating with GNU Radio flowgraphs. Starcoder is used in production to demodulate and decode satellite communications in real-time. https://github.com/infostellarinc/starcoder. I gave a presentation on Starcoder at the 2018 GNU Radio conference in Henderson, Nevada. https://www.youtube.com/watch?v=lwHgrNaMcZg
 				\item Wrote software to integrate our system with multiple radios and devices from different manufacturers.
@@ -73,9 +73,7 @@
 	\begin{cvsection}{Research}
 	   \begin{cvsubsection}{}{}{}
 	      \begin{itemize}
-    		  \item \textbf{Neural Style Transfer with Adversarially Robust Classifiers}. Under review.
-    		    
-    		  https://reiinakano.com/2019/06/21/robust-neural-style-transfer.html
+    		  \item \textbf{Adversarially Robust Neural Style Transfer}. https://distill.pub/2019/advex-bugs-discussion/response-4/
 	          
 	          \item \textbf{Neural Painters: A learned differentiable constraint for generating brushstroke paintings}. Under review.
 	          
