--- a/main.tex
+++ b/main.tex
@@ -28,7 +28,7 @@
 
 % Set applicant's personal data for header
 \name{Reiichiro Nakano}
-\address{Tokyo, Japan \linebreak https://reiinakano.github.io}
+\address{San Francisco, California \linebreak https://reiinakano.github.io}
 \contacts{reiichiro.s.nakano@gmail.com}
 
 \begin{document}
@@ -38,6 +38,12 @@
 	
 	% Print the content
 	\begin{cvsection}{Employment}
+	    \begin{cvsubsection}{Member of Technical Staff}{OpenAI}{January 2020 -- Present}
+			\begin{itemize}
+				\item Research and development on Minecraft AI in the reinforcement learning team.
+			\end{itemize}
+		\end{cvsubsection}
+	
 		\begin{cvsubsection}{Software Engineer}{Infostellar}{December 2017 -- August 2019}
 			\begin{itemize}
 				\item Lead author and maintainer of Starcoder, a gRPC server for dynamically starting, stopping and communicating with GNU Radio flowgraphs. Starcoder is used in production to demodulate and decode satellite communications in real-time. https://github.com/infostellarinc/starcoder. I gave a presentation on Starcoder at the 2018 GNU Radio conference in Henderson, Nevada. https://www.youtube.com/watch?v=lwHgrNaMcZg
@@ -50,6 +56,18 @@
 				\item Designed and wrote the backend software for Adatos' core cloud products, developing automated machine learning techniques for credit scoring in the process.
 			\end{itemize}
 		\end{cvsubsection}
+	\end{cvsection}
+	
+	\begin{cvsection}{Research}
+	   \begin{cvsubsection}{}{}{}
+	      \begin{itemize}
+    		  \item \textbf{Adversarially Robust Neural Style Transfer}. https://distill.pub/2019/advex-bugs-discussion/response-4/
+	          
+	          \item \textbf{Neural Painters: A learned differentiable constraint for generating brushstroke paintings}.
+	          
+	          https://arxiv.org/abs/1904.08410
+	      \end{itemize}
+	   \end{cvsubsection}
 	\end{cvsection}
 	
 	\begin{cvsection}{Open source software and personal projects}
@@ -68,18 +86,6 @@
 				\item \textbf{Notable contributions to major open-source projects}. \textit{TensorFlow.js}: Implemented various CPU and GPU operations; \textit{ml5.js}: Implemented SketchRNN; \textit{magenta and magenta.js}: Added distillation code and Javascript model for arbitrary image stylization. \textit{scikit-learn}: Fixed software regression in v0.19 release.
 			\end{itemize}
 		\end{cvsubsection}
-	\end{cvsection}
-	
-	\begin{cvsection}{Research}
-	   \begin{cvsubsection}{}{}{}
-	      \begin{itemize}
-    		  \item \textbf{Adversarially Robust Neural Style Transfer}. https://distill.pub/2019/advex-bugs-discussion/response-4/
-	          
-	          \item \textbf{Neural Painters: A learned differentiable constraint for generating brushstroke paintings}. Under review.
-	          
-	          https://arxiv.org/abs/1904.08410
-	      \end{itemize}
-	   \end{cvsubsection}
 	\end{cvsection}
 	
 	\begin{cvsection}{Education}
