--- a/main.tex
+++ b/main.tex
@@ -40,7 +40,10 @@
 	\begin{cvsection}{Employment}
 	    \begin{cvsubsection}{Member of Technical Staff}{OpenAI}{January 2020 -- Present}
 			\begin{itemize}
-				\item Research and development on Minecraft AI in the reinforcement learning team.
+                    \item Research and development on computer-using agents in the multimodal team.
+                    \item Research and development on GPT4 in the multimodal team.
+				\item Research and development on WebGPT in the reinforcement learning team.
+                    \item Research and development on Minecraft AI in the reinforcement learning team.
 			\end{itemize}
 		\end{cvsubsection}
 	
@@ -61,6 +64,12 @@
 	\begin{cvsection}{Research}
 	   \begin{cvsubsection}{}{}{}
 	      \begin{itemize}
+    		  \item \textbf{GPT-4: vision component - data, training run babysitting, deployment \& post-training}. https://arxiv.org/abs/2303.08774
+       
+    		  \item \textbf{Webgpt: Browser-assisted question-answering with human feedback}. https://arxiv.org/abs/2112.09332
+        
+    		  \item \textbf{Training verifiers to solve math word problems}. https://arxiv.org/abs/2110.14168
+        
     		  \item \textbf{Adversarially Robust Neural Style Transfer}. https://distill.pub/2019/advex-bugs-discussion/response-4/
 	          
 	          \item \textbf{Neural Painters: A learned differentiable constraint for generating brushstroke paintings}.
@@ -78,12 +87,6 @@
 			    
 			    https://github.com/reiinakano/arbitrary-image-stylization-tfjs 
 			    \item \textbf{Scikit-plot} (2017). Creator of a library for common data science plots and visualizations. 1.4k+ GitHub stars, 15k+ monthly PyPi downloads. https://github.com/reiinakano/scikit-plot
-				\item \textbf{Xcessiv} (2017). Creator of a web-based tool for automated hyperparameter search and stacked ensembling. Mentioned by Kaggle on Twitter and LinkedIn. 1.1k+ GitHub stars. https://github.com/reiinakano/xcessiv
-				\item \textbf{Fast style transfer in the browser}. Built the first deeplearn.js (now TensorFlow.js) demo of Fast Neural Style Transfer. 1.2k+ GitHub stars. Has been ported to the ml5.js library. 
-				
-				https://github.com/reiinakano/fast-style-transfer-deeplearnjs
-				\item \textbf{GAN Playground}. Built a demo allowing training of GANs on toy datasets in the browser. 200+ GitHub stars. https://github.com/reiinakano/gan-playground
-				\item \textbf{Notable contributions to major open-source projects}. \textit{TensorFlow.js}: Implemented various CPU and GPU operations; \textit{ml5.js}: Implemented SketchRNN; \textit{magenta and magenta.js}: Added distillation code and Javascript model for arbitrary image stylization. \textit{scikit-learn}: Fixed software regression in v0.19 release.
 			\end{itemize}
 		\end{cvsubsection}
 	\end{cvsection}
