--- a/main.tex
+++ b/main.tex
@@ -64,7 +64,7 @@
 	\begin{cvsection}{Research}
 	   \begin{cvsubsection}{}{}{}
 	      \begin{itemize}
-    		  \item \textbf{GPT-4: vision component - data, training run babysitting, deployment \& post-training}. https://arxiv.org/abs/2303.08774
+    		  \item \textbf{GPT-4: vision component - data, training run babysitting, deployment \& post-training}.\newline https://arxiv.org/abs/2303.08774
        
     		  \item \textbf{Webgpt: Browser-assisted question-answering with human feedback}. https://arxiv.org/abs/2112.09332
         
